<resources>
    <string name="app_name">My Shorts</string>
    <string name="todo">TODO</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="password">Password</string>
    <string name="signup1">Signup</string>
    <string name="sign_up">SIGN UP</string>
    <string name="todo1">TODO</string>
    <string name="login">Login</string>
    <string name="email1">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="password1">Password</string>
    <string name="login1">Login</string>
    <string name="add_video">Add Video</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="click_to_upload_video">Click to Upload Video</string>
    <string name="todo2">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="write_your_caption_here">Write your caption here</string>
    <string name="todo3">TODO</string>
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="posts">Posts</string>
    <string name="_0">0</string>
    <string name="_0p">0</string>
    <string name="_0f">0</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="textview">TextView</string>
    <string name="like">Like</string>
</resources>