<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black">

    <VideoView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/icon_pause"
        android:id="@+id/pause_icon"
        android:visibility="gone"
        android:contentDescription="@string/todo7" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progress_bar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/user_detail_layout"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/profile_icon"
            android:src="@color/black"
            android:contentDescription="@string/todo8" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="captain"
                android:textColor="@color/white"
                android:id="@+id/username_view"
                android:textSize="24sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Hey this is first video"
                android:textColor="@color/white"
                android:id="@+id/caption_view"
                android:textSize="16sp"
                android:textStyle="bold"/>


        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/like"
        android:layout_width="51dp"
        android:layout_height="47dp"
        android:layout_above="@+id/likecount"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="406dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/todo6"
        app:srcCompat="@drawable/favorite_icon" />

    <TextView
        android:id="@+id/likecount"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="262dp"
        android:text="@string/like"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap,TextContrastCheck" />


</RelativeLayout>







